--- a/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/methods.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d7a79">  <td>17/05/29 17:16:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AppsAndLinksTestCase.beforeTest()[pri:0, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@31610302]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663411182</td>   <td></td> </tr>
-<tr bgcolor="9d7a79">  <td>17/05/29 17:18:38</td>   <td>107733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCase.test()[pri:0, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@31610302]">test</td> 
-  <td>main@1663411182</td>   <td></td> </tr>
-<tr bgcolor="9d7a79">  <td>17/05/29 17:21:20</td>   <td>270100</td> <td>&nbsp;</td><td title="&lt;&lt;AppsAndLinksTestCase.afterTest()[pri:0, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@31610302]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/05/31 15:49:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AppsAndLinksTestCases.beforeTest()[pri:0, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/05/31 15:50:11</td>   <td>14036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.Example1()[pri:1, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">Example1</td> 
+  <td>main@89387388</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/05/31 15:50:33</td>   <td>36430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.Example2()[pri:2, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">Example2</td> 
+  <td>main@89387388</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/05/31 15:50:44</td>   <td>46665</td> <td>&nbsp;</td><td title="&lt;&lt;AppsAndLinksTestCases.afterTest()[pri:0, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
 </table>
