New automated tcs at 14/06
see jira automated tcs and estimation doc

--- a/Automation/northeasternuniversity.cxplatform/test-output/Default TestSuite/Automated Full Regression TestCycle.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/Default TestSuite/Automated Full Regression TestCycle.html
@@ -75,10 +75,10 @@ function toggleAllBoxes() {
 <td><b>Instance</b></td>
 </tr>
 <tr>
-<td title='northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases.test()'><b>test</b><br>Test class: northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases</td>
+<td title='northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCaseNUCP119.test()'><b>test</b><br>Test class: northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCaseNUCP119</td>
 <td></td>
 <td>57</td>
-<td>northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@5702b3b1</td></tr>
+<td>northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCaseNUCP119@5702b3b1</td></tr>
 </table><p>
 </body>
 </html>
