--- a/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/classes.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/classes.html
@@ -11,11 +11,23 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Example1</td>
+<td>NUCP57</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Example2</td>
+<td>NUCP56</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>NUCP54</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>NUCP53</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>NUCP49</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
