--- a/Automation/northeasternuniversity.cxplatform/test-output/index.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,7 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">5 methods, 1 failed,   4 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Default_suite">
+                      <span>
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="NUCP57">NUCP57</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +116,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="Example1">Example1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="NUCP49">NUCP49</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="Example2">Example2</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="NUCP53">NUCP53</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="NUCP54">NUCP54</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="NUCP56">NUCP56</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,6 +146,54 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="NUCP57">
+                  </a> <!-- NUCP57 -->
+                  <span class="method-name">NUCP57</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at org.testng.Assert.fail(Assert.java:93)
+	at org.testng.Assert.failNotEquals(Assert.java:512)
+	at org.testng.Assert.assertTrue(Assert.java:41)
+	at org.testng.Assert.assertTrue(Assert.java:51)
+	at northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases.NUCP57(AppsAndLinksTestCases.java:214)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:497)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:108)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:661)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:869)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1193)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:126)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:744)
+	at org.testng.TestRunner.run(TestRunner.java:602)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:380)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:375)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:340)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:289)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1301)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1226)
+	at org.testng.TestNG.runSuites(TestNG.java:1144)
+	at org.testng.TestNG.run(TestNG.java:1115)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:230)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:76)
+
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -130,16 +202,30 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Example1">
-                  </a> <!-- Example1 -->
-                  <span class="method-name">Example1</span>
+                  <a name="NUCP49">
+                  </a> <!-- NUCP49 -->
+                  <span class="method-name">NUCP49</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Example2">
-                  </a> <!-- Example2 -->
-                  <span class="method-name">Example2</span>
+                  <a name="NUCP53">
+                  </a> <!-- NUCP53 -->
+                  <span class="method-name">NUCP53</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="NUCP54">
+                  </a> <!-- NUCP54 -->
+                  <span class="method-name">NUCP54</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="NUCP56">
+                  </a> <!-- NUCP56 -->
+                  <span class="method-name">NUCP56</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +233,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/jp/rhn13gwn1yl71qmdgw7z6f7h0000gr/T/testng-eclipse-1565611668/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/jp/rhn13gwn1yl71qmdgw7z6f7h0000gr/T/testng-eclipse--1870389151/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -196,20 +282,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Example1')
+data.setCell(0, 1, 'NUCP49')
 data.setCell(0, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases')
-data.setCell(0, 3, 22390);
+data.setCell(0, 3, 59024);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Example2')
+data.setCell(1, 1, 'NUCP53')
 data.setCell(1, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases')
-data.setCell(1, 3, 10234);
+data.setCell(1, 3, 8551);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'NUCP56')
+data.setCell(2, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases')
+data.setCell(2, 3, 8491);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'NUCP54')
+data.setCell(3, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases')
+data.setCell(3, 3, 4324);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'NUCP57')
+data.setCell(4, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases')
+data.setCell(4, 3, 4321);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 32 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -241,16 +339,30 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">Example1</span>
-                <span class="method-start">14040 ms</span>
+                <span class="method-name">NUCP49</span>
+                <span class="method-start">31811 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Example2</span>
-                <span class="method-start">36434 ms</span>
+                <span class="method-name">NUCP53</span>
+                <span class="method-start">90840 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">NUCP54</span>
+                <span class="method-start">99392 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">NUCP56</span>
+                <span class="method-start">103718 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">NUCP57</span>
+                <span class="method-start">112210 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">46669 ms</span>
+                <span class="method-start">116534 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
