Adding new test cases NUCP-173 and NUCP-174

--- a/Automation/northeasternuniversity.cxplatform/test-output/index.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods, 1 failed,   4 passed</span>
+                    <span class="method-stats">7 methods, 1 failed,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -102,7 +102,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="NUCP57">NUCP57</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases" hash-for-method="NUCP57">NUCP57</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -116,22 +116,32 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="NUCP49">NUCP49</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases" hash-for-method="NUCP173">NUCP173</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="NUCP53">NUCP53</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases" hash-for-method="NUCP174">NUCP174</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="NUCP54">NUCP54</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases" hash-for-method="NUCP49">NUCP49</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases" hash-for-method="NUCP56">NUCP56</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases" hash-for-method="NUCP53">NUCP53</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases" hash-for-method="NUCP54">NUCP54</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases" hash-for-method="NUCP56">NUCP56</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -149,7 +159,7 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases</span>
+              <span class="class-name">northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -162,7 +172,7 @@
 	at org.testng.Assert.failNotEquals(Assert.java:512)
 	at org.testng.Assert.assertTrue(Assert.java:41)
 	at org.testng.Assert.assertTrue(Assert.java:51)
-	at northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases.NUCP57(AppsAndLinksTestCases.java:214)
+	at northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases.NUCP57(AppsAndLinksTestCases.java:219)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -197,9 +207,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases</span>
+              <span class="class-name">northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="NUCP173">
+                  </a> <!-- NUCP173 -->
+                  <span class="method-name">NUCP173</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="NUCP174">
+                  </a> <!-- NUCP174 -->
+                  <span class="method-name">NUCP174</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="NUCP49">
@@ -233,7 +257,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/jp/rhn13gwn1yl71qmdgw7z6f7h0000gr/T/testng-eclipse--1870389151/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/jp/rhn13gwn1yl71qmdgw7z6f7h0000gr/T/testng-eclipse--1431300200/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -242,7 +266,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases&quot;/&gt;
+      &lt;class name=&quot;northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -282,27 +306,35 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'NUCP49')
-data.setCell(0, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases')
-data.setCell(0, 3, 59024);
+data.setCell(0, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
+data.setCell(0, 3, 72213);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'NUCP53')
-data.setCell(1, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases')
-data.setCell(1, 3, 8551);
+data.setCell(1, 1, 'NUCP173')
+data.setCell(1, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
+data.setCell(1, 3, 8570);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'NUCP56')
-data.setCell(2, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases')
-data.setCell(2, 3, 8491);
+data.setCell(2, 1, 'NUCP53')
+data.setCell(2, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
+data.setCell(2, 3, 8550);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'NUCP54')
-data.setCell(3, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases')
-data.setCell(3, 3, 4324);
+data.setCell(3, 1, 'NUCP56')
+data.setCell(3, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
+data.setCell(3, 3, 8514);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'NUCP57')
-data.setCell(4, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases')
-data.setCell(4, 3, 4321);
+data.setCell(4, 1, 'NUCP174')
+data.setCell(4, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
+data.setCell(4, 3, 4337);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'NUCP54')
+data.setCell(5, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
+data.setCell(5, 3, 4328);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'NUCP57')
+data.setCell(6, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
+data.setCell(6, 3, 4313);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -333,36 +365,44 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">beforeTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">NUCP49</span>
-                <span class="method-start">31811 ms</span>
+                <span class="method-start">40275 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">NUCP173</span>
+                <span class="method-start">112492 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">NUCP174</span>
+                <span class="method-start">121063 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">NUCP53</span>
-                <span class="method-start">90840 ms</span>
+                <span class="method-start">125402 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">NUCP54</span>
-                <span class="method-start">99392 ms</span>
+                <span class="method-start">133953 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">NUCP56</span>
-                <span class="method-start">103718 ms</span>
+                <span class="method-start">138282 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">NUCP57</span>
-                <span class="method-start">112210 ms</span>
+                <span class="method-start">146797 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">116534 ms</span>
+                <span class="method-start">151112 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
