--- a/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/methods.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/methods.html
@@ -1,18 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2e7d9">  <td>17/06/14 11:39:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AppsAndLinksTestCases.beforeTest()[pri:0, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="d2e7d9">  <td>17/06/14 14:04:41</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AppsAndLinksTestCases.beforeTest()[pri:0, instance:northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases@ae45eb6]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>17/06/14 11:40:26</td>   <td>31808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP49()[pri:1, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">NUCP49</td> 
+<tr bgcolor="d2e7d9">  <td>17/06/14 14:05:21</td>   <td>40271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP49()[pri:1, instance:northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases@ae45eb6]">NUCP49</td> 
   <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>17/06/14 11:41:25</td>   <td>90837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP53()[pri:2, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">NUCP53</td> 
+<tr bgcolor="d2e7d9">  <td>17/06/14 14:06:33</td>   <td>112488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP173()[pri:2, instance:northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases@ae45eb6]">NUCP173</td> 
   <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>17/06/14 11:41:34</td>   <td>99389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP54()[pri:3, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">NUCP54</td> 
+<tr bgcolor="d2e7d9">  <td>17/06/14 14:06:42</td>   <td>121059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP174()[pri:2, instance:northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases@ae45eb6]">NUCP174</td> 
   <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>17/06/14 11:41:38</td>   <td>103715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP56()[pri:4, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">NUCP56</td> 
+<tr bgcolor="d2e7d9">  <td>17/06/14 14:06:46</td>   <td>125398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP53()[pri:2, instance:northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases@ae45eb6]">NUCP53</td> 
   <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>17/06/14 11:41:46</td>   <td>112207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP57()[pri:5, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">NUCP57</td> 
+<tr bgcolor="d2e7d9">  <td>17/06/14 14:06:55</td>   <td>133949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP54()[pri:2, instance:northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases@ae45eb6]">NUCP54</td> 
   <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>17/06/14 11:41:51</td>   <td>116531</td> <td>&nbsp;</td><td title="&lt;&lt;AppsAndLinksTestCases.afterTest()[pri:0, instance:northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases@ae45eb6]">&lt;&lt;afterTest</td> 
+<tr bgcolor="d2e7d9">  <td>17/06/14 14:06:59</td>   <td>138278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP56()[pri:2, instance:northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases@ae45eb6]">NUCP56</td> 
+  <td>main@89387388</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/06/14 14:07:08</td>   <td>146793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppsAndLinksTestCases.NUCP57()[pri:2, instance:northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases@ae45eb6]">NUCP57</td> 
+  <td>main@89387388</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>17/06/14 14:07:12</td>   <td>151108</td> <td>&nbsp;</td><td title="&lt;&lt;AppsAndLinksTestCases.afterTest()[pri:0, instance:northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases@ae45eb6]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
 </table>
