--- a/Automation/northeasternuniversity.cxplatform/test-output/old/Default TestSuite/classes.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/old/Default TestSuite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCaseNUCP119</td>
+<td>northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCaseNUCP119</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
