--- a/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/classes.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>northeasternunversity.cxplatform.employeeportaltestcases.userprofile.AppsAndLinksTestCases</td>
+<td>northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -27,7 +27,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>NUCP174</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>NUCP49</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>NUCP173</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
