academic resources test cases

--- a/Automation/northeasternuniversity.cxplatform/test-output/index.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods, 1 failed,   6 passed</span>
+                    <span class="method-stats">9 methods, 1 failed,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -122,6 +122,16 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases" hash-for-method="NUCP174">NUCP174</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases" hash-for-method="NUCP178">NUCP178</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases" hash-for-method="NUCP179">NUCP179</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -172,7 +182,7 @@
 	at org.testng.Assert.failNotEquals(Assert.java:512)
 	at org.testng.Assert.assertTrue(Assert.java:41)
 	at org.testng.Assert.assertTrue(Assert.java:51)
-	at northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases.NUCP57(AppsAndLinksTestCases.java:219)
+	at northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases.NUCP57(AppsAndLinksTestCases.java:259)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -226,6 +236,20 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="NUCP178">
+                  </a> <!-- NUCP178 -->
+                  <span class="method-name">NUCP178</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="NUCP179">
+                  </a> <!-- NUCP179 -->
+                  <span class="method-name">NUCP179</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="NUCP49">
                   </a> <!-- NUCP49 -->
                   <span class="method-name">NUCP49</span>
@@ -257,7 +281,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/jp/rhn13gwn1yl71qmdgw7z6f7h0000gr/T/testng-eclipse--1431300200/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/jp/rhn13gwn1yl71qmdgw7z6f7h0000gr/T/testng-eclipse-1170022098/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -306,40 +330,48 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(9);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'NUCP49')
 data.setCell(0, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
-data.setCell(0, 3, 72213);
+data.setCell(0, 3, 120873);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'NUCP173')
 data.setCell(1, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
-data.setCell(1, 3, 8570);
+data.setCell(1, 3, 8562);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'NUCP53')
 data.setCell(2, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
-data.setCell(2, 3, 8550);
+data.setCell(2, 3, 8545);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'NUCP56')
+data.setCell(3, 1, 'NUCP178')
 data.setCell(3, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
-data.setCell(3, 3, 8514);
+data.setCell(3, 3, 8518);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'NUCP174')
+data.setCell(4, 1, 'NUCP56')
 data.setCell(4, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
-data.setCell(4, 3, 4337);
+data.setCell(4, 3, 8509);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'NUCP54')
+data.setCell(5, 1, 'NUCP174')
 data.setCell(5, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
-data.setCell(5, 3, 4328);
+data.setCell(5, 3, 4361);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'NUCP57')
+data.setCell(6, 1, 'NUCP179')
 data.setCell(6, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
-data.setCell(6, 3, 4313);
+data.setCell(6, 3, 4356);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'NUCP54')
+data.setCell(7, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
+data.setCell(7, 3, 4329);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'NUCP57')
+data.setCell(8, 2, 'northeasternunversity.cxplatform.employeeportaltestcases.appsandlinks.AppsAndLinksTestCases')
+data.setCell(8, 3, 4318);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -372,37 +404,45 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">NUCP49</span>
-                <span class="method-start">40275 ms</span>
+                <span class="method-start">59575 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">NUCP173</span>
-                <span class="method-start">112492 ms</span>
+                <span class="method-start">180453 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">NUCP174</span>
-                <span class="method-start">121063 ms</span>
+                <span class="method-start">189016 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">NUCP178</span>
+                <span class="method-start">193378 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">NUCP179</span>
+                <span class="method-start">201897 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">NUCP53</span>
-                <span class="method-start">125402 ms</span>
+                <span class="method-start">206254 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">NUCP54</span>
-                <span class="method-start">133953 ms</span>
+                <span class="method-start">214801 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">NUCP56</span>
-                <span class="method-start">138282 ms</span>
+                <span class="method-start">219131 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">NUCP57</span>
-                <span class="method-start">146797 ms</span>
+                <span class="method-start">227641 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">151112 ms</span>
+                <span class="method-start">231961 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
