--- a/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/classes.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/classes.html
@@ -27,6 +27,14 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>NUCP179</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>NUCP178</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>NUCP174</td>
 <td>&nbsp;</td></tr>
 <tr>
