Resolved issues with RecentLinks and Quicklinks test cases

--- a/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/classes.html
+++ b/Automation/northeasternuniversity.cxplatform/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>northeasternunversity.cxplatform.employeeportaltestcases.dashboard.LatestNewsTestCases</td>
+<td>northeasternunversity.cxplatform.employeeportaltestcases.dashboard.GmailPortletTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>NUCP75</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>NUCP74</td>
+<td>NUCP193</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
